--- a/package.json
+++ b/package.json
@@ -5,8 +5,10 @@
   "main": "index.js",
   "dependencies": {
     "koa": "^2.11.0",
+    "koa-router": "^8.0.8",
     "snabbdom": "^0.7.4",
-    "vue": "^2.6.11"
+    "vue": "^2.6.11",
+    "vue-server-renderer": "^2.6.11"
   },
   "devDependencies": {
     "parcel-bundler": "^1.12.4"
