--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "koa-router": "^8.0.8",
     "snabbdom": "^0.7.4",
     "vue": "^2.6.11",
+    "vue-router": "^3.1.6",
     "vue-server-renderer": "^2.6.11"
   },
   "devDependencies": {
