--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "koa": "^2.11.0",
     "koa-router": "^8.0.8",
+    "koa-send": "^5.0.0",
     "snabbdom": "^0.7.4",
     "vue": "^2.6.11",
     "vue-router": "^3.1.6",
