--- a/ssr/webpack-ssr/package.json
+++ b/ssr/webpack-ssr/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "dev": "node server",
+    "serve": "node server",
+    "start": "cross-env NODE_ENV=production node server",
+    "build": "rimraf dist && npm run build:client && npm run build:server",
     "build:client": "cross-env NODE_ENV=production webpack --config build/webpack.client.config.js --progress --hide-modules",
     "build:server": "cross-env NODE_ENV=production webpack --config build/webpack.server.config.js --progress --hide-modules"
   },
@@ -12,13 +14,19 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "babel-loader": "^8.1.0",
     "chokidar": "^3.3.1",
     "cross-env": "^7.0.2",
     "express": "^4.17.1",
     "friendly-errors-webpack-plugin": "^1.7.0",
+    "koa-webpack-dev-middleware": "^2.0.2",
+    "koa-webpack-hot-middleware": "^1.0.3",
     "memory-fs": "^0.5.0",
+    "mini-css-extract-plugin": "^0.9.0",
+    "rimraf": "^3.0.2",
     "vue": "^2.6.11",
     "vue-loader": "^15.9.1",
+    "vue-server-renderer": "^2.6.11",
     "vue-template-compiler": "^2.6.11",
     "webpack": "^4.42.1",
     "webpack-dev-middleware": "^3.7.2",
