--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "vue-server-renderer": "^2.6.11"
   },
   "devDependencies": {
+    "@babel/core": "^7.10.2",
+    "@babel/preset-env": "^7.10.2",
+    "babel-jest": "^26.0.1",
     "jest": "^26.0.1",
     "parcel-bundler": "^1.12.4"
   },
